# JIPP2

./: CMakeLists.txt
Lab10.1/: CSVhandler.cpp  CSVhandler.h  example_handler.h
Lab12/Przykłady/Matrix/src/: main.cpp
Lab4/Klasy_i_Obiekty/Przyklad/: CMakeLists.txt  klasyIobiekty.cpp
Lab4/Klasy_i_Obiekty/Zadania/: CMakeLists.txt  Klasy.cpp
Lab4/Struktury/Przyklad/: CMakeLists.txt  strukturyApp.cpp
Lab4/Struktury/Zadania/: CMakeLists.txt  samochody.cpp
Lab5/: CMakeLists.txt  zajecia.cpp
Lab5/przyklad/include/: Point.h
Lab5/przyklad/src/: Point.cpp  main.cpp
Lab6/: CMakeLists.txt  main.cpp  operators.cpp  operators.h
Lab7/: CMakeLists.txt  main.cpp
Lab8/zadanieNotatnik/: CMakeLists.txt
Lab8/zadanieNotatnik/include/: ListNote.h  Note.h  NoteDirector.h  TextNote.h
Lab8/zadanieNotatnik/src/: main.cpp  notatnik.cpp
Lab9/Przyklad/: CMakeLists.txt  main.cpp
Lab9/Przyklad2/: CMakeLists.txt  Line.cpp  Stop.cpp
Lab9/Przyklad3/: CMakeLists.txt
Projekt1/: CMakeLists.txt
Projekt1/betterMatrixApp/: CMakeLists.txt  main.cpp
Projekt1/betterMatrixLib/include/: matrixLib.h
Projekt1/betterMatrixLib/src/: matrixLib.cpp
Projekt1/matrixApp/: CMakeLists.txt  main.cpp
Projekt1/matrixLib/include/: matrixLib.h
Projekt1/matrixLib/src/: matrixLib.cpp
Projekt_koncowy/: CMakeLists.txt
Projekt_koncowy/csvEditorApp/: CMakeLists.txt  main.cpp
Projekt_koncowy/csvEditorLib/include/: csvEditorLib.h
Projekt_koncowy/csvEditorLib/src/: csvEditorLib.cpp
Projekt_koncowy/statisticMathChekerLib/include/: statisticMathChekerLib.h
Projekt_koncowy/statisticMathChekerLib/src/: statisticMathChekerLib.cpp
Projekt_koncowy/statisticsMathChekerApp/: CMakeLists.txt  main.cpp
allocation_basics/: CMakeLists.txt  main.cpp
lab11/: CMakeLists.txt  main.cpp
lab11/include/: pointer.h
lab11/src/: pointer.cpp
simpleCalc/: CMakeLists.txt  main.cpp
simpleCalc/include/: calc.h
simpleCalc/src/: calc.cpp  main.cpp
